# keyboard-player

./: AGENTS.md  BUSINESS_REQUIREMENTS.md  Cargo.toml  DEVELOPMENT_REQUIREMENTS.md  README.md
.github/workflows/: release.yml
assets/texts/: en_elementary_001.json  en_high_001.json  en_middle_001.json  zh_elementary_001.json  zh_high_001.json  zh_middle_001.json
src/: main.rs
src/audio/: mod.rs  sfx.rs
src/data/: mod.rs  text_loader.rs  text_model.rs
src/resources/: font_assets.rs  game_config.rs  game_data.rs  mod.rs
src/states/: menu.rs  mod.rs  playing.rs  result.rs  selection.rs
src/storage/: records.rs
src/systems/: difficulty.rs  mod.rs
