[package]
name = "kb-player-bevy"
version = "0.1.0"
edition = "2024"
description = "Keyboard typing practice game built with Bevy"
authors = ["lephix"]
license = "Apache-2.0"
repository = "https://github.com/lephix/keyboard-player"

[dependencies]
bevy = "0.18.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
dirs = "6"

# Enable optimizations for dependencies in dev builds (faster Bevy)
[profile.dev.package."*"]
opt-level = 1
